# Contig_Identify_and_Extract

./: .gitignore  CMakeLists.txt  Readme.md  hello_world.cpp  main.cpp
Kseq_Cpp/: CMakeLists.txt  Kseq_Cpp.cpp  Kseq_Cpp.h  kseq.h
